--- a/ATIV_6.ipynb
+++ b/ATIV_6.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMLrUiLBpaICg0LkCBU0Gp3",
+      "authorship_tag": "ABX9TyO1xX2AKoZaBKWB4uS0dP4v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,161 +56,161 @@
         "inicio= 'Cirurgia estereotáxica para ratos'\n",
         "print(inicio)\n",
         "\n",
-        "# anestesia='Verificar se o animal está devidamente anestesiado.'\n",
-        "# print(anestesia)\n",
+        "anestesia='Verificar se o animal está devidamente anestesiado.'\n",
+        "print(anestesia)\n",
         "\n",
         "\n",
-        "# anestesias= input('O animal está completamnete sedado? Digite s ou n:')\n",
-        "# if anestesias == 's' and anestesias != 'n':\n",
-        "#     print('Continuar')\n",
-        "# if anestesias == 'n' and anestesias != 's' :\n",
-        "#      print('Aprofundar anestesia')\n",
+        "anestesias= input('O animal está completamnete sedado? Digite s ou n:')\n",
+        "if anestesias == 's' and anestesias != 'n':\n",
+        "    print('Continuar')\n",
+        "if anestesias == 'n' and anestesias != 's' :\n",
+        "     print('Aprofundar anestesia')\n",
         "\n",
         "\n",
-        "# print('Posicionar animal no estereotáxico')\n",
-        "# print('Encaixar as barras de suporte no ouvido externo do animal')\n",
+        "print('Posicionar animal no estereotáxico')\n",
+        "print('Encaixar as barras de suporte no ouvido externo do animal')\n",
         "\n",
         "\n",
-        "# posicao=input('O animal está bem posicionado? Digite s ou n:')\n",
-        "# if posicao == 's':\n",
-        "#   certo= input('A cabeça do animal está reta? Digite s ou n:')\n",
-        "#   if certo == 's':\n",
-        "#     print('Prosseguir para limpeza do campo de trabalho')\n",
-        "#   if certo == 'n':\n",
-        "#     print('Ajuste a cabeça do animal até que fique reta.')\n",
-        "# if posicao == 'n':\n",
-        "#   print('Posicione corretamente o animal')\n",
+        "posicao=input('O animal está bem posicionado? Digite s ou n:')\n",
+        "if posicao == 's':\n",
+        "  certo= input('A cabeça do animal está reta? Digite s ou n:')\n",
+        "  if certo == 's':\n",
+        "    print('Prosseguir para limpeza do campo de trabalho')\n",
+        "  if certo == 'n':\n",
+        "    print('Ajuste a cabeça do animal até que fique reta.')\n",
+        "if posicao == 'n':\n",
+        "  print('Posicione corretamente o animal')\n",
         "\n",
-        "# print('Limpeza do campo de trabalho')\n",
-        "# print('Realizar tricotomia na cabeça')\n",
-        "# print('Realizar incisão')\n",
-        "# print('Reirar tecidos moles até expor o crânio')\n",
-        "# print('Limpar o crânio com H2O2 10 volumes')\n",
+        "print('Limpeza do campo de trabalho')\n",
+        "print('Realizar tricotomia na cabeça')\n",
+        "print('Realizar incisão')\n",
+        "print('Reirar tecidos moles até expor o crânio')\n",
+        "print('Limpar o crânio com H2O2 10 volumes')\n",
         "\n",
-        "# limpeza=input('O crânio está completamente limpo? Digite s ou n:')\n",
-        "# if limpeza == 's':\n",
-        "#   print('Aplicar poliacrilato no perímetro externo para hemostasia.')\n",
-        "# if limpeza == 'n':\n",
-        "#   while limpeza == 'n':\n",
-        "#     print('Limpar até que o campo de trabalho esteja completamente limpo')\n",
-        "#     limpeza_2=input('O crânio está completamente limpo? Digite s ou n:')\n",
-        "#     if limpeza_2 == 's': break\n",
+        "limpeza=input('O crânio está completamente limpo? Digite s ou n:')\n",
+        "if limpeza == 's':\n",
+        "  print('Aplicar poliacrilato no perímetro externo para hemostasia.')\n",
+        "if limpeza == 'n':\n",
+        "  while limpeza == 'n':\n",
+        "    print('Limpar até que o campo de trabalho esteja completamente limpo')\n",
+        "    limpeza_2=input('O crânio está completamente limpo? Digite s ou n:')\n",
+        "    if limpeza_2 == 's': break\n",
         "\n",
-        "# print('Escolha três pontos para fixar os parafusos.')\n",
-        "# print('Dê três voltas em cada parafuso')\n",
+        "print('Escolha três pontos para fixar os parafusos.')\n",
+        "print('Dê três voltas em cada parafuso')\n",
         "\n",
-        "# voltas=0\n",
-        "# while voltas <=3:\n",
-        "#   print(voltas)\n",
-        "#   voltas +=1\n",
-        "#   if voltas == 4: break\n",
+        "voltas=0\n",
+        "while voltas <=3:\n",
+        "  print(voltas)\n",
+        "  voltas +=1\n",
+        "  if voltas == 4: break\n",
         "\n",
-        "# print('Parafusos posicionados corretamente')\n",
-        "# posCaninicial={'AP':6.42,'LLa':3.33,'LLb':3.33,'DV':4.2}\n",
-        "# posCaninicial['AP']=6.42-0.42\n",
-        "# posCaninicial['LLa']=3.33+0.3\n",
-        "# posCaninicial['LLb']=3.33-0.30\n",
-        "# posCaninicial['DV']=4.2-0.2\n",
+        "print('Parafusos posicionados corretamente')\n",
+        "posCaninicial={'AP':6.42,'LLa':3.33,'LLb':3.33,'DV':4.2}\n",
+        "posCaninicial['AP']=6.42-0.42\n",
+        "posCaninicial['LLa']=3.33+0.3\n",
+        "posCaninicial['LLb']=3.33-0.30\n",
+        "posCaninicial['DV']=4.2-0.2\n",
         "\n",
-        "# canPos={'AP':6,'LLa':3.63,'LLb':3.03,'DV':4}\n",
-        "# posicaoCan=('AP','LLa','LLb','DV')\n",
-        "# print('Início do posicionamento das cânulas-guia')\n",
-        "# for i in range(len(posicaoCan)):\n",
-        "#   print(posicaoCan[i],':',posCaninicial[posicaoCan[i]])\n",
+        "canPos={'AP':6,'LLa':3.63,'LLb':3.03,'DV':4}\n",
+        "posicaoCan=('AP','LLa','LLb','DV')\n",
+        "print('Início do posicionamento das cânulas-guia')\n",
+        "for i in range(len(posicaoCan)):\n",
+        "  print(posicaoCan[i],':',posCaninicial[posicaoCan[i]])\n",
         "\n",
-        "# print('Furar com a broca o crânio para inserção das cânulas')\n",
-        "# print('Atenção! Cuidado para não perfurar as meninges!')\n",
-        "# print('Apoie a mão que segura a broca contra o assoalho ou ao estereotáxico e perfure o crânio a +- 45 graus de angulação')\n",
+        "print('Furar com a broca o crânio para inserção das cânulas')\n",
+        "print('Atenção! Cuidado para não perfurar as meninges!')\n",
+        "print('Apoie a mão que segura a broca contra o assoalho ou ao estereotáxico e perfure o crânio a +- 45 graus de angulação')\n",
         "\n",
-        "# print('Introdução da cânula')\n",
-        "# prof=int(input('Digite o DV da cânula:'))\n",
-        "# if prof == 4:\n",
-        "#   print('A cânula será aprofundada 4cm')\n",
-        "#   if prof == 4:\n",
-        "#     print('Aprofundando:')\n",
-        "#     profundidade=0\n",
-        "#     while profundidade <=4:\n",
-        "#       print(profundidade)\n",
-        "#       profundidade +=1\n",
-        "#       if profundidade == 5: break \n",
-        "# else:\n",
-        "#   print('O DV digitado está incorreto')\n",
+        "print('Introdução da cânula')\n",
+        "prof=int(input('Digite o DV da cânula:'))\n",
+        "if prof == 4:\n",
+        "  print('A cânula será aprofundada 4cm')\n",
+        "  if prof == 4:\n",
+        "    print('Aprofundando:')\n",
+        "    profundidade=0\n",
+        "    while profundidade <=4:\n",
+        "      print(profundidade)\n",
+        "      profundidade +=1\n",
+        "      if profundidade == 5: break \n",
+        "else:\n",
+        "  print('O DV digitado está incorreto')\n",
         "\n",
-        "# print('Cânula aprofundada com sucesso!')\n",
+        "print('Cânula aprofundada com sucesso!')\n",
         "\n",
-        "# sang=input('Há sangramento? Digite s ou n:')\n",
-        "# if sang == 's':\n",
-        "#   print('Realize hemostasia com papel')\n",
-        "# if sang == 'n':\n",
-        "#   print('Prossiga para a próxima etapa')\n",
-        "# if sang !=('s' and 'n'):\n",
-        "#   print('Erro! Digite s ou n')\n",
-        "\n",
-        "\n",
-        "# print('Mistura para capacete')\n",
-        "# print('Adicione 3g de acrílico polimerizante com 1mL de solvente e misture')\n",
-        "\n",
-        "# while(True):\n",
-        "#   sang=input('A mistura está com textura expessa, porém maleável? Digite s ou n:')\n",
-        "#   if(sang == 's'):\n",
-        "#     print('Cobrir a cânula-guia e parafusos')\n",
-        "#     break\n",
-        "#   else:\n",
-        "#     print('Adicione mais acrílico')\n",
-        "\n",
-        "# print('Espere secar até ficar suficientemente rígido') \n",
-        "# while(True):   \n",
-        "#   duro=input('O acrílico está rígido? Digite s ou n:')\n",
-        "#   if(duro == 's'): \n",
-        "#     break\n",
-        "#   else:\n",
-        "#     print('Aguarde mais um pouco até endurecer')\n",
-        "\n",
-        "# print('Fixação da outra cânula')\n",
-        "# print('Levantar levemente o braço do estereotáxico cuidando para que a cânula-guia previamente fixada não se movimente')\n",
-        "\n",
-        "# prof=int(input('Digite o DV da cânula 2:'))\n",
-        "# if prof == 4:\n",
-        "#   print('A cânula será aprofundada 4cm')\n",
-        "#   if prof == 4:\n",
-        "#     print('Aprofundando:')\n",
-        "#     profundidade=0\n",
-        "#     while profundidade <=4:\n",
-        "#       print(profundidade)\n",
-        "#       profundidade +=1\n",
-        "#       if profundidade == 5: break \n",
-        "# else:\n",
-        "#   print('O DV digitado está incorreto')\n",
-        "\n",
-        "# print('Cânula 2 aprofundada com sucesso!')\n",
-        "\n",
-        "# sang=input('Há sangramento? Digite s ou n:')\n",
-        "# if sang == 's':\n",
-        "#   print('Realize hemostasia com papel')\n",
-        "# if sang == 'n':\n",
-        "#   print('Prossiga para a próxima etapa')\n",
-        "# if sang !=('s' and 'n'):\n",
-        "#   print('Erro! Digite s ou n')\n",
+        "sang=input('Há sangramento? Digite s ou n:')\n",
+        "if sang == 's':\n",
+        "  print('Realize hemostasia com papel')\n",
+        "if sang == 'n':\n",
+        "  print('Prossiga para a próxima etapa')\n",
+        "if sang !=('s' and 'n'):\n",
+        "  print('Erro! Digite s ou n')\n",
         "\n",
         "\n",
-        "# print('Mistura para capacete')\n",
-        "# print('Adicione 3g de acrílico polimerizante com 1mL de solvente e misture')\n",
+        "print('Mistura para capacete')\n",
+        "print('Adicione 3g de acrílico polimerizante com 1mL de solvente e misture')\n",
         "\n",
-        "# while(True):\n",
-        "#   sang=input('A mistura está com textura expessa, porém maleável? Digite s ou n:')\n",
-        "#   if(sang == 's'):\n",
-        "#     print('Cobrir a cânula-guia e parafusos')\n",
-        "#     break\n",
-        "#   else:\n",
-        "#     print('Adicione mais acrílico')\n",
+        "while(True):\n",
+        "  sang=input('A mistura está com textura expessa, porém maleável? Digite s ou n:')\n",
+        "  if(sang == 's'):\n",
+        "    print('Cobrir a cânula-guia e parafusos')\n",
+        "    break\n",
+        "  else:\n",
+        "    print('Adicione mais acrílico')\n",
         "\n",
-        "# print('Espere secar até ficar suficientemente rígido') \n",
-        "# while(True):   \n",
-        "#   duro=input('O acrílico está rígido? Digite s ou n:')\n",
-        "#   if(duro == 's'): \n",
-        "#     break\n",
-        "#   else:\n",
-        "#     print('Aguarde mais um pouco até endurecer')\n",
+        "print('Espere secar até ficar suficientemente rígido') \n",
+        "while(True):   \n",
+        "  duro=input('O acrílico está rígido? Digite s ou n:')\n",
+        "  if(duro == 's'): \n",
+        "    break\n",
+        "  else:\n",
+        "    print('Aguarde mais um pouco até endurecer')\n",
+        "\n",
+        "print('Fixação da outra cânula')\n",
+        "print('Levantar levemente o braço do estereotáxico cuidando para que a cânula-guia previamente fixada não se movimente')\n",
+        "\n",
+        "prof=int(input('Digite o DV da cânula 2:'))\n",
+        "if prof == 4:\n",
+        "  print('A cânula será aprofundada 4cm')\n",
+        "  if prof == 4:\n",
+        "    print('Aprofundando:')\n",
+        "    profundidade=0\n",
+        "    while profundidade <=4:\n",
+        "      print(profundidade)\n",
+        "      profundidade +=1\n",
+        "      if profundidade == 5: break \n",
+        "else:\n",
+        "  print('O DV digitado está incorreto')\n",
+        "\n",
+        "print('Cânula 2 aprofundada com sucesso!')\n",
+        "\n",
+        "sang=input('Há sangramento? Digite s ou n:')\n",
+        "if sang == 's':\n",
+        "  print('Realize hemostasia com papel')\n",
+        "if sang == 'n':\n",
+        "  print('Prossiga para a próxima etapa')\n",
+        "if sang !=('s' and 'n'):\n",
+        "  print('Erro! Digite s ou n')\n",
+        "\n",
+        "\n",
+        "print('Mistura para capacete')\n",
+        "print('Adicione 3g de acrílico polimerizante com 1mL de solvente e misture')\n",
+        "\n",
+        "while(True):\n",
+        "  sang=input('A mistura está com textura expessa, porém maleável? Digite s ou n:')\n",
+        "  if(sang == 's'):\n",
+        "    print('Cobrir a cânula-guia e parafusos')\n",
+        "    break\n",
+        "  else:\n",
+        "    print('Adicione mais acrílico')\n",
+        "\n",
+        "print('Espere secar até ficar suficientemente rígido') \n",
+        "while(True):   \n",
+        "  duro=input('O acrílico está rígido? Digite s ou n:')\n",
+        "  if(duro == 's'): \n",
+        "    break\n",
+        "  else:\n",
+        "    print('Aguarde mais um pouco até endurecer')\n",
         "\n",
         "print('Fixação de cânulas finalizada com sucesso!')\n",
         "print('Acmode o animal em uma caixa com lâmpada para mantê-lo aquecido até que acorde')\n",
